--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1.0",
-        "armincms/blogger": "^0.7"
+        "armincms/store": "*"
     },
     "autoload": {
         "psr-4": {
