--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "extra": {
         "laravel": {
             "providers": [ 
+                "Armincms\\Ranika\\ServiceProvider"
             ]
         }
     },
